--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,11 +1,12 @@
 
-<nav class="navbar navbar-light bg-light">
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <a class="navbar-brand">
-      <img src="https://banner2.cleanpng.com/20200129/ctv/transparent-study-icon-search-icon-school-icon-5e944d8d4b8f79.6053168315867774853095.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        <%= link_to "Home", root_path, class:"nav-link" %>
+      <%= link_to "Home", root_path, class:"nav-link" %>
     </a>
-
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
