--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,22 @@
-<h1>Home page!</h1>
+
+<div id="carouselExampleControls" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img src="https://www.iberdrola.com/wcorp/gc/prod/en_US/comunicacion/lifelong_learning_mult_1_res/lifelong_746x419.jpg" class="d-block w-100" alt="Image">
+        </div>
+        <div class="carousel-item">
+        <img src="https://learningfactor.com.au/wp-content/uploads/2018/10/brain-map.jpg" class="d-block w-100" alt="Image">
+        </div>
+        <div class="carousel-item">
+        <img src="https://apicms.thestar.com.my/uploads/images/2020/05/03/666609.jpg" class="d-block w-100" alt="Image">
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
