--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.link-design{
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: "Georgia";
+}
+
+.font-georgia{
+    font-family: "Georgia";
+}
+
+
+
+
