--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,55 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+
+<% content_for :head do%>
+	<!-- HEADER CONTENT-->
+	<link rel="stylesheet" href=".../stylesheets/newsession.css">
+	
 <% end %>
 
-<%= render "devise/shared/links" %>
+<div class="container-fluid font-georgia">
+	<div class="row main-content bg-success text-center">
+		<div class="col-md-4 text-center company__info">
+			<span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
+			<h4 class="company_title">LMS</h4>
+		</div>
+		
+		<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+			<div class="container-fluid">
+        <div class="row">
+					<h2><b><br/>Sign up</b></h2>
+				</div>
+					
+				<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+					<div class="row form-group form__input">
+            <b><%= f.label :email %><br /><b>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          </div>
+
+          <div class="row form-group form__input">
+            <b><%= f.label :password %></b>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
+
+          <div class="row form-group form__input">
+            <b><%= f.label :password_confirmation %><br /></b>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+
+          <div class="actions">
+            <%= f.submit "Sign up", class: "btn btn-primary {color: #008080}" %>
+          </div>
+        <% end %>
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</div>
