--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -2,16 +2,14 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #008080;">
   <div class="container-fluid">
-    <a class="navbar-brand">
-      <%= link_to "Home", root_path, class:"nav-link" %>
-    </a>
+      <%= link_to "Home", root_path, class:"nav-link link-design" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse link-design" id="navbarSupportedContent">
         <% if user_signed_in? %>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -40,11 +38,11 @@
         <% else %>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Sign Up", new_user_registration_path, class:"nav-link" %>
+            <%= link_to "Sign Up", new_user_registration_path, class:"nav-link link-design" %>
           </li>
 
           <li class="nav-item">
-            <%= link_to "Sign In", new_user_session_path, class:"nav-link" %>
+            <%= link_to "Sign In", new_user_session_path, class:"nav-link link-design" %>
           </li>
         </ul>
         <% end %>
