--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,10 +1,6 @@
-
-
-
-
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #008080;">
   <div class="container-fluid">
-      <%= link_to "Home", root_path, class:"nav-link link-design" %>
+      <%= link_to "Home", root_path, class:"link-design" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,11 +34,11 @@
         <% else %>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Sign Up", new_user_registration_path, class:"nav-link link-design" %>
+            <%= link_to "Sign Up", new_user_registration_path, class:"link-design" %>
           </li>
 
           <li class="nav-item">
-            <%= link_to "Sign In", new_user_session_path, class:"nav-link link-design" %>
+            <%= link_to "Sign In", new_user_session_path, class:"link-design" %>
           </li>
         </ul>
         <% end %>
