--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,7 +1,9 @@
 <% content_for :head do%>
-	<!-- HEADER CONTENT-->
-	<link rel="stylesheet" href="assets/stylesheets/home.css">
-	
+	<!-- HEADER CONTENT
+  
+  configure_sign_up_params'
+  <link rel="stylesheet" href="stylesheets/newsession.css">
+  -->
 <% end %>
 
 <div class="container-fluid font-georgia">
@@ -19,10 +21,10 @@
 					
 				<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
-					School:
+          School:
           <div class="row form-group form__input">
             <%= f.fields_for :school do |school_form| %>
-              <li>
+              <li> 
                 <%= school_form.label :name %><br />
                 <%= school_form.text_field :name %>
 
