--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -1,5 +1,60 @@
 <h1>New School</h1>
-
 <%= render 'form', school: @school %>
-
 <%= link_to 'Back', schools_path %>
+
+<!--
+<div class="container-fluid font-georgia">
+	<div class="row main-content bg-success text-center">
+		<div class="col-md-4 text-center company__info">
+			<span class="company__logo"><h2><span class="fa fa-android"></span></h2></span>
+			<h4 class="company_title">LMS</h4>
+		</div>
+		
+		<div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+			<div class="container-fluid">
+        <div class="row">
+					<h2><b><br/>Sign up</b></h2>
+				</div>
+					
+				<%#= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%#= render "devise/shared/error_messages", resource: resource %>
+          <b><u><h3>School</h3></u></b>
+          
+          <%= nested_form_for([resource_name, resource.with_school], url: registration_path(resource_name)) do |f| %>
+            <%= f.fields_for :school do |school_form| %>
+              <div class="row form-group form__input">
+                <b><%= school_form.label :name %></b>
+                <%= school_form.text_field :name %>
+            
+                <b><br /><%= school_form.label :subdomain %></b>
+                <%= school_form.text_field :subdomain %>
+              </div>
+            <% end %>
+          </div>
+          
+
+          <b><u><h3><br />Administrator</h3></u></b>
+          <div class="row form-group form__input">
+            <b><%= f.label :email %><b>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        
+            <b><br /><%= f.label :password %></b>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password" %>
+         
+            <b><br /><%= f.label :password_confirmation %></b>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+
+          <div class="actions">
+            <%= f.submit "Sign up", class: "btn btn-primary {color: #008080}" %>
+          </div>
+        <% end %>
+				<%= render "devise/shared/links" %>
+			</div>
+		</div>
+	</div>
+</div>
+-->
