--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,6 +7,12 @@
     font-weight: bold;
     font-size: 20px;
     font-family: "Georgia";
+    margin-right: 20px;
+    text-decoration: none;
+}
+
+.link-design:hover{
+    color: #D5D5D7;
 }
 
 .font-georgia{
