--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,24 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" style="color: white; background-color: #008080">
   <div class="container-fluid">
       <%= link_to "Home", root_path, class:"link-design" %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+      </button>
 
     <div class="collapse navbar-collapse link-design" id="navbarSupportedContent">
         <% if user_signed_in? %>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"> | My Classes | </a>
+            <%= link_to "Classes", root_path, class:"link-design" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">My Grades</a>
+            <%= link_to "Grades", root_path, class:"link-design" %>
           </li>
         </ul>
 
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="dropdown-toggle link-design" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               My Profile
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -34,7 +34,7 @@
         <% else %>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Sign Up", new_user_registration_path, class:"link-design" %>
+            <%= link_to "Sign Up ", new_user_registration_path, class:"link-design" %>
           </li>
 
           <li class="nav-item">
