--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,11 +1,3 @@
-<% content_for :head do%>
-	<!-- HEADER CONTENT
-  
-  configure_sign_up_params'
-  <link rel="stylesheet" href="stylesheets/newsession.css">
-  -->
-<% end %>
-
 <div class="container-fluid font-georgia">
 	<div class="row main-content bg-success text-center">
 		<div class="col-md-4 text-center company__info">
@@ -36,6 +28,12 @@
 
               <b><u><h3><br />Administrator</h3></u></b>
               <div class="row form-group form__input">
+                <b><%= f.label :first_name %><b>
+                <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name" %>
+
+                <b><%= f.label :last_name %><b>
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+
                 <b><%= f.label :email %><b>
                 <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
             
