--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" style="color: white; background-color: #004D4D">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg navbar-light navbar-fixed-top" style="color: white; background-color: #003939" >
+  <div class="container-fluid" width="50%">
       <%= link_to "Home", root_path, class:"link-design" %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
