--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -1,48 +1,29 @@
-<div class="wrapper d-flex align-items-stretch" style="width:25%">
-	<nav id="sidebar" class="active">
-		<div class="custom-menu">
-			<button type="button" id="sidebarCollapse" class="btn btn-primary">
-	            <i class="fa fa-bars"></i>
-	            <span class="sr-only">Toggle Menu</span>
-	        </button>
-        </div>
-				
-        <div class="p-4">
-		  	<h1><a href="index.html" class="logo">Flash</a></h1>
-	        <ul class="list-unstyled components mb-5">
-	          <li class="active">
-	            <a href="#"><span class="fa fa-home mr-3"></span> Home</a>
-	          </li>
-	          <li>
-	            <a href="#"><span class="fa fa-user mr-3"></span> About</a>
-	          </li>
-	          <li>
-                <a href="#"><span class="fa fa-briefcase mr-3"></span> Portfolio</a>
-	          </li>
-	          <li>
-                 <a href="#"><span class="fa fa-sticky-note mr-3"></span> Blog</a>
-	          </li>
-	          <li>
-                <a href="#"><span class="fa fa-paper-plane mr-3"></span> Contact</a>
-	          </li>
-	        </ul>
-
-	        <div class="mb-5">
-				<h3 class="h6 mb-3">Subscribe for newsletter</h3>
-				<form action="#" class="subscribe-form">
-                    <div class="form-group d-flex">
-	            	    <div class="icon"><span class="icon-paper-plane"></span></div>
-	                    <input type="text" class="form-control" placeholder="Enter Email Address">
-	                </div>
-	            </form>
-			</div>
-
-	        <div class="footer">
-	        	<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-						  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-	        </div>
-
-	    </div>
-    </nav>
-</div>
+<nav class="navbar_ navbar-inverse fixed-top" id="sidebar-wrapper" role="navigation">
+  <ul class="nav sidebar-nav">
+    <div class="sidebar-header">
+      <div class="sidebar-brand">
+        <%= link_to "neptune", home_dashboard_path, class:"brand--font" %></div></div>
+      <li></li>
+      
+      <li>
+        <i class="fa fa-home fa-fw" aria-hidden="true"></i>
+        <%= link_to "Classes", root_path, class:"sidebar--item--design" %>
+      </li>
+       <li><%= link_to "Grades", root_path, class:"sidebar--item--design" %></li>
+       <li><a href="#team">Team</a></li>
+       <li class="dropdown">
+       <a href="#works" class="dropdown-toggle"  data-toggle="dropdown">Works <span class="caret"></span></a>
+     <ul class="dropdown-menu animated fadeInLeft" role="menu">
+      <div class="dropdown-header">Dropdown heading</div>
+      <li><a href="#pictures">Pictures</a></li>
+      <li><a href="#videos">Videeos</a></li>
+      <li><a href="#books">Books</a></li>
+      <li><a href="#art">Art</a></li>
+      <li><a href="#awards">Awards</a></li>
+      </ul>
+      </li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#followme">Follow me</a></li>
+      </ul>
+</nav>
