--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,11 @@
       <div id="wrapper">
         <div class="overlay"></div>
         <%= render 'home/sidebar' %>
-        <%= yield %>
+        <div id="page-content-wrapper" >
+          <div class="container" >
+            <%= yield %>
+          </div>
+        </div>
       </div>
     <% else %>
       <div class="container">
