--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -396,6 +396,23 @@ display: block;
 
 .btn--primary{
   font-size: 20px;
-  border-radius: 4px;
+  border-radius: 4px!important;
   padding: 5px 8px!important;
+  width: 15%!important;
+}
+
+.btn--primary2{
+  font-size: 18px;
+  border-radius: 4px!important;
+  padding: 5px 8px!important;
+  width: 12%!important;
+}
+
+.form--select{
+  width: 15%;
+}
+
+.col--padding{
+  padding-right: 400;
+  padding-left: 80px;
 }
