--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -47,6 +47,13 @@
     margin-bottom: 20px;
 }
 
+.space--field--file{
+  margin-bottom: 20px;
+  width: 28%;
+  font-size: 16px;
+  font-family: "Georgia";
+}
+
 ::placeholder{
     color: #3d3d3d;
     opacity: 1;
@@ -408,6 +415,15 @@ display: block;
   width: 12%!important;
 }
 
+.btn--primary--bigger{
+  font-size: 18px;
+  border-radius: 4px!important;
+  padding: 5px 8px!important;
+  width: 28%!important;
+  margin-top: 1em!important;
+  margin-left: 1.5em!important;
+}
+
 .form--select{
   width: 15%;
 }
@@ -415,4 +431,8 @@ display: block;
 .col--padding{
   padding-right: 400;
   padding-left: 80px;
+}
+
+.tab{
+  padding-left: 8em;
 }
