--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -13,14 +13,13 @@
     <% if current_user.administrator == true %>
       <li><%= link_to "Classes", root_path, class:"sidebar--item--design" %></li>
       <li><%= link_to "Grades", root_path, class:"sidebar--item--design" %></li>
-      <li><%= link_to "Add Users", users_adding_add_users_path, class:"sidebar--item--design" %></li>
+      <li><%#= link_to "Add Users", users_adding_add_users_path, class:"sidebar--item--design" %></li>
       <li class="dropdown">
-        <a href="#works" class="dropdown-toggle"  data-toggle="dropdown">Works <span class="caret"></span></a>
-        <ul class="dropdown-menu animated fadeInLeft" role="menu">
-          <div class="dropdown-header">Dropdown heading</div>
-          <li><a href="#pictures">Pictures</a></li>
-          <li><a href="#books">Books</a></li>
-          <li><a href="#art">Art</a></li>
+        <a class="dropdown-toggle sidebar--item--design" href="#" data-bs-toggle="dropdown" id="dropLink" aria-expanded="false">Add User<span class="caret"></span></a>
+        
+        <ul class="dropdown-menu" aria-labelledby="dropLink">
+          <li><%= link_to 'Add Manually', users_adding_add_users_manually_path, class:"dropdown-item" %></li>
+          <li><%= link_to 'Add From File', users_adding_add_users_from_file_path, class:"dropdown-item" %></li>
         </ul>
       </li>
     <% end %>
