add user manually

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -413,6 +413,7 @@ display: block;
   border-radius: 4px!important;
   padding: 5px 8px!important;
   width: 12%!important;
+  margin-left: 1em!important;
 }
 
 .btn--primary--bigger{
