--- a/app/views/users/adding/_group_user_form.html.erb
+++ b/app/views/users/adding/_group_user_form.html.erb
@@ -1,5 +1,5 @@
-<%= text_field_tag "users[][first_name]" %>
-<%= text_field_tag "users[][last_name]" %>
-<%= email_field_tag "users[][email]" %>
+<%= text_field_tag "[][:first_name]" %>
+<%= text_field_tag "[][:last_name]" %>
+<%= email_field_tag "[][:email]" %>
 <%#= password_field_tag :password, autocomplete: "new-password", class: "space--field", placeholder: "Password (6 characters minimum)" %>
 <%#= password_field_tag :password_confirmation, autocomplete: "new-password", placeholder: "Password Confirmation", class: "space--field" %>
