--- a/app/views/users/adding/add_users_manually.html.erb
+++ b/app/views/users/adding/add_users_manually.html.erb
@@ -1,40 +1,56 @@
 <div class="card" style="max-width: 80rem; min-height: 30rem">
     <h5 class="card-header card--header--title">Add Users Manually</h5>
     <div class="card-body">
-        <p class="card--text"><br />How many users do you want to add? <br /></p>
-        <%= form_with(url: users_adding_add_users_manually_path(@nr), method: :get, local: true) do |form| %>
-            <%= form.select :number, @nr.to_a, {}, {class: "form-select form-select-md mb-3 form--select"} %>
-            <%= form.submit "Choose", class: "btn btn--primary2" %>
-            <%#= link_to 'Choose', users_save_users_save_users_path, class:"btn btn--primary2" %>
+        <!--<p class="card--text"><br />How many users do you want to add? <br /></p>-->
+        <%#= form_with(url: users_adding_add_users_manually_path(@nr), method: :get, local: true) do |form| %>
+            <%#= form.select :number, @nr.to_a, {}, {class: "form-select form-select-md mb-3 form--select"} %>
+            <%#= form.submit "Choose", class: "btn btn--primary2" %>
         <%# end %>
 
-        <% @contor.to_i.times do %> 
-            <div class="row form-group form__input">
-                <%= form.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "First Name", class: "space--field" %>
-                <%= form.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "Last Name", class: "space--field" %>
-                <%= form.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email Address", class: "space--field" %>
+        <p class="card--text">Complete the following fields with the user's details</p>
+        <%= form_with(url: users_adding_save_users_path(), method: :get, local: true) do |f| %>
+            <div class="container">
+                <%= f.label "First Name: " %>
+                <%= f.text_field :first_name, autofocus: true, autocomplete: "first name", placeholder: "First Name", class: "space--field" %><br />
+                <%= f.label "Last Name: " %>
+                <%= f.text_field :last_name, autofocus: true, autocomplete: "last name", placeholder: "Last Name", class: "space--field" %><br />
+                <%= f.label "Email Address: " %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: "space--field" %><br />
+
+                <b><%= f.label "Choose de user's role(s):" %></b><br />
+                <%= f.label "Administrator: " %>
+                <%= f.check_box :administrator %><br />
+                <%= f.label "Teacher: " %>
+                <%= f.check_box :teacher %><br />
+                <%= f.label "Student: " %>
+                <%= f.check_box :student %><br />
             </div>
+            
+            
+            <%= submit_tag "Save", class: "btn btn--primary2" %>
+            <%= link_to 'Cancel', home_dashboard_path, class:"btn btn--primary2" %>
         <% end %>
 
-            <% if @contor.to_i > 0 %>    
-                <div class="actions">
-                <%#= submit_tag "Save", class: "btn btn--primary2" %>
-                    <%= link_to 'Save', home_dashboard_path, class:"btn btn--primary2" %>
-                </div>
-            <% end %>
-            
-        <% end %>
+        <%#= link_to 'Cancel', home_dashboard_path, class:"btn btn--primary2" %>
     </div>
 </div>
 
+<%#= form_for @detail do |form| %>
+            <%# form.fields_for :user do |builder| %> 
+                <!--<div class="row form-group form__input">-->
+                    <%#= builder.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder: "First Name", class: "space--field" %>
+                    <%#= builder.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder: "Last Name", class: "space--field" %>
+                    <%#= builder.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email Address", class: "space--field" %>
+                    <%#= builder.select :administrator, ["true", "false"], {class: "form-select form-select-md mb-3 form--select"} %>
+                    <%#= builder.select :teacher, ["true", "false"], {class: "form-select form-select-md mb-3 form--select"} %>
+                    <%#= builder.select :student, ["true", "false"], {class: "form-select form-select-md mb-3 form--select"} %>
+                <!--</div>-->
+            <%# end %>
 
-<!--
-            <div class="row">
-                <div class="col">
-                    <%#= form.select :number, ["1","2","3","4","5","6","7","8","9","10"], {}, {class: "form-select form-select-md mb-3 form--select"} %>
-                </div>
-                <div class="col col--padding">
-                    <%#= form.submit "OK", class: "btn btn-primary" %>
-                </div>
-            </div>
-            -->
+            <%# if @contor.to_i > 0 %>    
+               <!-- <div class="actions">-->
+                <%#= submit_tag "Save", class: "btn btn--primary2" %>
+                    <%#= link_to 'Save', home_dashboard_path, class:"btn btn--primary2" %>
+                <!--</div>--->
+            <%# end %>
+        <%# end %>
